testdata/errors/import_collision/main.spy
from foo import bar

def bar(x: int) -> int:
    return x - 100

print(bar(5))
